Clinic crud added
